--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     // compile("org.springframework.boot:spring-boot-devtools")
     compile("org.hibernate:hibernate-core")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.hsqldb:hsqldb")
+    compile("org.hsqldb:hsqldb:2.3.4")
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
@@ -40,7 +40,7 @@ dependencies {
     compile("org.apache.logging.log4j:log4j-api")
     compile("org.apache.logging.log4j:log4j-core")
 
-    compile("com.google.code.gson:gson")
+    // compile("com.google.code.gson:gson")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
