--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
         exclude module: "spring-boot-starter-tomcat"
     }
     // compile("org.springframework:spring-webmvc")
+    compile("org.json:json:20170516")
 
     compile("org.springframework.boot:spring-boot-starter-jetty")
 
