--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'gs-serving-web-content'
+    baseName = 'combo-customizer'
     version =  '0.1.0'
 }
 
@@ -25,23 +25,19 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    // compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    // compile("org.springframework.boot:spring-boot-devtools")
-    compile("org.hibernate:hibernate-core")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.hsqldb:hsqldb:2.3.4")
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    // compile("org.springframework:spring-webmvc")
-    compile("org.json:json:20170516")
-
     compile("org.springframework.boot:spring-boot-starter-jetty")
+
+    compile("org.hibernate:hibernate-core")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.hsqldb:hsqldb:2.3.4")
+
+    compile("org.json:json:20170516")
 
     compile("org.apache.logging.log4j:log4j-api")
     compile("org.apache.logging.log4j:log4j-core")
-
-    // compile("com.google.code.gson:gson")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
