--- a/build.gradle
+++ b/build.gradle
@@ -21,24 +21,24 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web") {
+    compile("org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile("org.springframework.boot:spring-boot-starter-jetty:1.5.3.RELEASE")
 
-    compile("org.hibernate:hibernate-core")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.hibernate:hibernate-core:5.0.12.Final")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.3.RELEASE")
     compile("org.hsqldb:hsqldb:2.3.4")
 
     compile("org.json:json:20170516")
 
-    compile("org.apache.logging.log4j:log4j-api")
-    compile("org.apache.logging.log4j:log4j-core")
+    compile("org.apache.logging.log4j:log4j-api:2.7")
+    compile("org.apache.logging.log4j:log4j-core:2.7")
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.boot:spring-boot-starter-test:1.5.3.RELEASE")
 }
 
