--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
+# Local
 server.port=8080
 
-spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+
+#spring.database.driverClassName=org.hsqldb.jdbcDriver
+#spring.datasource.platform=hsqldb
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
+
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://google/combo_customizer?cloudSqlInstance=combo-customizer:us-central1:combo-customizer-mysql&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.username=spring-user
+spring.datasource.password=P@ssw0rd
+
+# GAE
+#server.port=80
