--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE") {
@@ -33,8 +33,10 @@ dependencies {
     compile("org.hibernate:hibernate-core:5.0.12.Final")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.5.3.RELEASE")
     compile("org.hsqldb:hsqldb:2.3.4")
-
     compile("org.json:json:20170516")
+    compile("org.springframework:spring-websocket:4.3.8.RELEASE")
+    compile("org.springframework:spring-messaging:4.3.8.RELEASE")
+    compile("com.google.cloud.sql:mysql-socket-factory:1.0.2")
 
     compile("org.apache.logging.log4j:log4j-api:2.7")
     compile("org.apache.logging.log4j:log4j-core:2.7")
