--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ server.port=8080
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
-
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 # In-memory (HSQLDB)
-#spring.database.driverClassName=org.hsqldb.jdbcDriver
-#spring.datasource.platform=hsqldb
+spring.database.driverClassName=org.hsqldb.jdbcDriver
+spring.datasource.platform=hsqldb
 
 # Cloud SQL (MySQL)
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://google/combo_customizer?cloudSqlInstance=combo-customizer:us-central1:combo-customizer-mysql&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=true
-spring.datasource.username=spring-user
-spring.datasource.password=P@ssw0rd
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://google/combo_customizer?cloudSqlInstance=combo-customizer:us-central1:combo-customizer-mysql&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=true
+#spring.datasource.username=spring-user
+#spring.datasource.password=P@ssw0rd
